data/derived/fa15/progs/unify/prog2335.ml.out
Characters 43-44:
  if ( f b ) then f (f,b)
                     ^
Error: This expression has type 'a * 'b -> bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b -> bool
